# pmpp_ex1

./: CMakeLists.txt  main.cc  matmul.cc  matmul.h  matrix.cc  mul_cpu.cc  mul_gpu.cu  test.h
